--- a/pkmn/Gemfile
+++ b/pkmn/Gemfile
@@ -49,11 +49,14 @@ end
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 #bootstrap
-gem 'bootstrap-sass'
-gem 'autoprefixer-rails'
+gem 'bootstrap-sass', '~> 3.3', '>= 3.3.7'
+gem 'autoprefixer-rails', '~> 6.7', '>= 6.7.2'
 
 #excel parsing
-gem 'roo', '~> 2.7.0'
+gem 'roo', '~> 2.7', '>= 2.7.1'
 
 #friendly_id
-gem 'friendly_id'
+gem 'friendly_id', '~> 5.2'
+
+#mailing
+gem 'mailboxer', '~> 0.14.0'
