--- a/movies/Gemfile
+++ b/movies/Gemfile
@@ -48,6 +48,9 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
+#suporte imagens
+gem 'paperclip', '~> 5.1'
+gem 'carrierwave', '~> 1.0'
+gem 'rmagick', '~> 2.16'
 #bootstrap
-gem "paperclip", "~> 5.1.0"
 gem 'bootstrap', '~> 4.0.0.alpha6'
