chess check list

--- a/TrainingDay/app/src/main/AndroidManifest.xml
+++ b/TrainingDay/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ImageryActivity" />
+        <activity android:name=".CheckMateActivity"></activity>
     </application>
 
 </manifest>
