--- a/movies/Gemfile
+++ b/movies/Gemfile
@@ -11,7 +11,7 @@ gem 'rails', '~> 5.0.1'
 # Use mysql as the database for Active Record
 gem 'mysql2', '>= 0.3.18', '< 0.5'
 # Use Puma as the app server
-gem 'puma', '~> 3.0'
+gem 'puma', '~> 3.6.2'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
@@ -50,7 +50,7 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 #suporte imagens
 gem 'paperclip', '~> 5.1'
-gem 'carrierwave', '~> 1.0'
-gem 'rmagick', '~> 2.16'
+#gem 'carrierwave', '~> 1.0'
+# gem 'rmagick', '~> 2.16'
 #bootstrap
 gem 'bootstrap', '~> 4.0.0.alpha6'
