--- a/training_day/Gemfile
+++ b/training_day/Gemfile
@@ -11,7 +11,7 @@ gem 'rails', '~> 5.0.1'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 # Use Puma as the app server
-gem 'puma', '~> 3.0'
+gem 'puma', '~> 3.6.2'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
@@ -51,3 +51,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 #for image uploading
 gem 'carrierwave', '~> 1.0.0'
 gem 'mini_magick', '~> 4.6', '>= 4.6.1'
+gem 'carrierwave-base64', '~> 2.4'
