--- a/TrainingDay/app/src/main/AndroidManifest.xml
+++ b/TrainingDay/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -13,11 +14,11 @@
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true">
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="pt.edp.android.fileprovider"
@@ -46,7 +47,8 @@
             android:label="@string/title_activity_drawer"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".GridActivity" />
-        <activity android:name=".ImageryActivity"></activity>
+        <activity android:name=".ImageryActivity" />
+        <activity android:name=".SwipeToRefreshActivity"></activity>
     </application>
 
 </manifest>
