imageable in fields_form

--- a/training_day/Gemfile
+++ b/training_day/Gemfile
@@ -55,6 +55,10 @@ source 'https://rails-assets.org' do
 end
 
 #for image uploading
-gem 'carrierwave', '~> 1.0.0'
+gem 'carrierwave', '~> 1.1'
 gem 'mini_magick', '~> 4.6', '>= 4.6.1'
 gem 'carrierwave-base64', '~> 2.4'
+
+#for nested forms
+gem 'cocoon', '~> 1.2', '>= 1.2.10'
+gem 'dropzonejs-rails', '~> 0.7.4'
